# localdock

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  tailwind.config.ts
docs/: architecture.md  changelog.md  setup.md
src/: App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: default.toml
src-tauri/src/: detector.rs  lib.rs  main.rs  process.rs  scanner.rs
src/components/: Header.tsx  ServerCard.tsx  ServerList.tsx  StatusBar.tsx  TitleBar.tsx
src/hooks/: useServers.ts
src/styles/: globals.css
