[package]
name = "localdock"
version = "0.2.0"
description = "Compact localhost server manager"
authors = ["you"]
edition = "2021"

[lib]
name = "localdock_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
open = "5"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "s"
panic = "abort"

[dev-dependencies]
tempfile = "3"
